@@ -37,7 +37,7 @@
    * If not, we provide it here.
    */
 #ifndef VERSION
-#  define VERSION 0.792-beta
+#  define VERSION 0.792
 #endif
 
    /*
